--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Api for MITRestaurants app, MERN certification final project.",
   "main": "server/app.js",
   "scripts": {
+    "local": "env-cmd -f ./env/local.env nodemon ./server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,17 @@
   "bugs": {
     "url": "https://github.com/Oscartic/mit-api-restaurants/issues"
   },
-  "homepage": "https://github.com/Oscartic/mit-api-restaurants#readme"
+  "homepage": "https://github.com/Oscartic/mit-api-restaurants#readme",
+  "dependencies": {
+    "body-parse": "^0.1.0",
+    "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
+    "express": "^4.17.2",
+    "joi": "^17.6.0",
+    "mongoose": "^6.2.1",
+    "uuidv4": "^6.2.12"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
