--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "homepage": "https://github.com/Oscartic/mit-api-restaurants#readme",
   "dependencies": {
     "body-parse": "^0.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "env-cmd": "^10.1.0",
     "express": "^4.17.2",
+    "firebase-admin": "^10.0.2",
     "joi": "^17.6.0",
     "mongoose": "^6.2.1",
     "uuidv4": "^6.2.12"
