--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/app.js",
   "scripts": {
     "local": "env-cmd -f ./env/local.env nodemon ./server/app.js",
+    "start": "env-cmd -f ./env/local.env  node ./server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "express": "^4.17.2",
     "joi": "^17.6.0",
     "mongoose": "^6.2.1",
+    "stripe": "^8.203.0",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
