--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Api for MITRestaurants app, MERN certification final project.",
   "main": "server/app.js",
   "scripts": {
-    "prod": "node ./server/app.js",
     "local": "env-cmd -f ./env/local.env nodemon ./server/app.js",
-    "start": "env-cmd -f ./env/local.env  node ./server/app.js",
+    "start": "node ./server/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
